# comsociety

./: .editorconfig  .env  .gitignore  .gitmodules  .lintstagedrc.json  .pre-commit-config.yaml  README.md  docker-compose.yaml  docker-compose.yml  requirements.txt  tsconfig.json
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.development  README.md  alembic.ini  config.example.py  config.py  database.py  pyproject.toml  requirements.txt  textrank.py
backend/app/: __init__.py
backend/app/auth/: __init__.py  controller.py  dto.py  service.py
backend/app/data/: __init__.py  controller.py
backend/app/post/: __init__.py  controller.py  dto.py  model.py  repository.py  service.py
backend/app/tests/: conftest.py  test_user.py
backend/app/user/: __init__.py  controller.py  dto.py  model.py  repository.py  service.py
backend/database/: __init__.py  sqlalchemy.py  uuid.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_user.py
docker/postgres/docker-entrypoint-initdb.d/: init.sql
frontend/: .dockerignore  .env  .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  kakao.js  test.js
frontend/src/: App.tsx  package-lock.json
frontend/src/App/: App.tsx
frontend/src/components/: ChangePassword.tsx  Chatbot.jsx  Directions.jsx  Login.tsx  MyPage.tsx  NoticeBoard.tsx  Roadview.jsx  Signup.tsx  WordCloud.tsx  map.css
frontend/src/components/Textrank/: Textrank.tsx  data.ts  index.ts
frontend/src/pages/: board.tsx  home.tsx
frontend/src/utils/: api.ts
(+7 files in other folders)
